# cv-generator-automation

./: .flake8  .gitignore  CI_CD_SETUP.md  INTERNATIONALIZATION.md  README.md  clean_project.command  config.json  cv_data.json  cv_generator.py  cv_generator_pt.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh  start_linux.sh  start_mac.sh  start_windows.bat  styles.json  translations.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCUSSIONS.md  README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
config/: config.json  styles.json  translations.json  translations_en.json
data/: cv_data.json  cv_data_example.json
docs/: FASE_1_BASELINE_PDF_RENDERER.md  FASE_2_ENGINE_ESTILOS.md  FASE_3_ADAPTACAO_PDF_RENDERER.md  FASE_4_FORMATADORES_SECAO.md  FASE_5_REGISTRY_FORMATADORES.md  FASE_6_LIMPEZA_HARDENING.md  GUIA_MANUTENCAO_PDF.md  PLANO_EXECUCAO.md  PLANO_REFATORACAO_PDF_RENDERER.md  tecnologias_conhecidas.csv
src/: __init__.py  cli.py  cv_service.py  exceptions.py  localization.py  logging_config.py  validators.py
src/application/: cv_service.py
src/cv_generator_app/: __init__.py  cli.py
src/domain/: localization.py  validators.py
src/infrastructure/: __init__.py  config_loader.py  json_repository.py  pdf_renderer.py
tests/: __init__.py  conftest.py
tests/helpers/: __init__.py  file_helpers.py  project_builders.py  style_helpers.py
tests/integration/: test_cv_generation_service.py
tests/unit/: test_cli.py  test_localization.py  (+6 more)
(+29 files in other folders)
