[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-generator-automation"
version = "0.1.0"
description = "Generate multilingual CV PDFs from JSON input."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cv-generator = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]
